--- a/MVC_API/Views/Students/Index.cshtml
+++ b/MVC_API/Views/Students/Index.cshtml
@@ -9,8 +9,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-@*<table class="table">
-    <tr>
+<table class="table">
+    @*<tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
@@ -42,7 +42,6 @@
                     <h5 class="card-title">@item.FirstName @item.LastName</h5>
                     <p class="card-text">@item.StudentID</p>
                     <p class="card-text">@item.FavoriteColor</p>
-
                 </div>
             </div>
         </td>
