--- a/MVC_API/Views/Shared/_Layout.cshtml
+++ b/MVC_API/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Courses", "Index", "Courses", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Students", "Index", "Students", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Registrations", "Index", "Registrations", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
